# Cochlear-Implant-Project

./: README.md  setup.sh
Audio_testing/: Dockerfile  README  README.md  ReadME  ReadMe  SoundViewerAndManipulator  SoundViewerAndManipulator.py  requirements.txt  testbench.py
AudiologistApp/: README.md  pubspec.yaml
AudiologistApp/lib/: main.dart
AudiologistApp/lib/models/: dsp_preset.dart
AudiologistApp/lib/screens/: device_connection_screen.dart  dsp_config_screen.dart  frequency_response_screen.dart  home_screen.dart  presets_screen.dart
AudiologistApp/lib/services/: device_connection_service.dart  dsp_config_service.dart
AudiologistApp/lib/widgets/: parameter_slider.dart
TestbenchSoftware/: teensyFirmware.ino
app/: analysis_options.yaml  pubspec.yaml
app/lib/: main.dart
app/lib/models/: audiogram.dart  channel_config.dart  hearing_aid_profile.dart
app/lib/screens/: audiogram_screen.dart  device_connection_screen.dart  dsp_config_screen.dart  frequency_response_screen.dart  home_screen.dart  presets_screen.dart
app/lib/services/: autofit_service.dart  device_connection_service.dart  dsp_config_service.dart  protocol_service.dart  transport.dart
firmware/: CMakeLists.txt  prj.conf
firmware/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
firmware/src/: ble_service.c  fft_waveform_v1.c  hearing_aid_dsp.c  main.c
firmware/tools/: hearing_aid_serial.py  requirements.txt
nRF54L15/: CMakeLists.txt  README.md  prj.conf
nRF54L15/src/: hearing_aid_dsp.c
